# 1generator

./: 1generator.cabal  README.md  example.txt  vong.csv  vong.csv.old
app/: Main.hs
src/: Vong.hs
