name:                1generator
version:             0.1.0.0
homepage:            https://github.com/kmein/1generator#readme
license:             BSD3
license-file:        LICENSE
author:              Kierán Meinhardt
maintainer:          kieran.meinhardt@gmail.com
copyright:           Copyright: (c) 2017 Kierán Meinhardt
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Vong
  build-depends:       base >= 4.7 && < 5
                     , cassava
                     , random
                     , text
  default-language:    Haskell2010

executable 1generator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , 1generator
                     , bytestring
                     , cassava
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kmein/1generator
